[tool.poetry]
name = "agno-bknd"
version = "0.1.0"
description = ""
authors = ["Subhomoy Roy Choudhury <subhomoyrchoudhury@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.93.0"
duckduckgo-search = "^8.0.5"
yfinance = "^0.2.64"
sqlalchemy = "^2.0.41"
fastapi = {extras = ["standard"], version = "^0.115.14"}
agno = "^1.7.0"
litellm = "^1.73.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
